# oref-map

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  gen-icons.js  pyproject.toml  web-dev
.github/ISSUE_TEMPLATE/: general.yml
.github/workflows/: deploy.yml
docs/: architecture.md  driving-mode.md  ellipse-alg-C.md  ellipse-feature.md  ellipse-probability-window.md  oref-sources.md
ellipses-server/: README.md  ellipse_service.py  server.py
functions/: locations_polygons.json.js
functions/api/: _proxy.js  alarms-history.js  alerts.js  analytics-daily.js  analytics.js  day-history.js  history.js
functions/tiles/: maptiler.js
ingestion/: wrangler.toml
ingestion/src/: index.js
oref-relay/: README.txt  index.js
shared/: tzeva-adom.js
status-server/: index.js
tests/: ellipse-alg-A.js  ellipse-alg-B.js  prediction.test.js
tools/: analyze_backfill_diff.py  backfill_history.py  build_location_populations.py  ellipse-from-locations.js  gen_ellipses.js  generate_israel_border.py
tools/lib/: ellipse-algorithms.js
web/: 404.html  about.html  ellipse-mode.js  index.html  israel_border.json  location_populations.json  manifest.json  prediction-mode.js  safety.html  sitemap.xml  sw.js
web/assets/: README.md
web/assets/css/: main.css
web/assets/js/: app-bootstrap.js  app-core.js  app-panels.fixed.preview.js  app-panels.js
worker/: wrangler-proxy2.toml  wrangler-proxy3.toml  wrangler.toml
worker/src/: index.js
